--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🕌 One Day One Juz</h1>
+            <h1>One Day One Juz Ibnu Katsir</h1>
             <div class="date-info">
                 <strong id="currentDate"></strong>
             </div>
@@ -479,12 +479,12 @@
     <script>
         // Data peserta
         const participants = [
-            'Ahmad Fauzi', 'Siti Nurhaliza', 'Muhammad Rizky', 'Fatimah Zahra', 'Abdul Rahman',
-            'Khadijah Amalia', 'Umar Farouk', 'Aisyah Putri', 'Ali Hakim', 'Maryam Salsabila',
-            'Yusuf Ibrahim', 'Zainab Fitri', 'Hamzah Amir', 'Ruqayyah Dewi', 'Bilal Hakim',
-            'Safiyyah Nora', 'Khalid Bayu', 'Hafsa Cantika', 'Saad Abdullah', 'Ummu Kultsum',
-            'Tariq Ramadan', 'Asma Maharani', 'Zubair Malik', 'Hafsah Indira', 'Salman Alfarisi',
-            'Nusaybah Putri', 'Mu\'adh bin Jabal', 'Sumayyah Rani', 'Abdullah Azzam', 'Khansa Aulia'
+            'Faruq', 'Mamduh', 'Muhammad', 'Fatimah', 'Abdul',
+            'Khadijah', 'Umar', 'Aisyah', 'Hakim', 'Maryam',
+            'Yusuf', 'Zainab', 'Hamzah', 'Dewi', 'Bilal',
+            'Syafiq', 'Bayu', 'Hafsa', 'Abdullah', 'Ummi',
+            'Tariq', 'Asma', 'Malik', 'Indira', 'Salman',
+            'Nusaybah', 'Muiz', 'Sumayyah', 'Azzam', 'Aulia'
         ];
 
         // Tanggal mulai program (bisa disesuaikan)
@@ -630,7 +630,7 @@
                 
                 // Determine status badge
                 let statusClass = 'low';
-                let statusText = 'Perlu Perbaikan';
+                let statusText = 'Yuk semangat';
                 if (data.percentage >= 80) {
                     statusClass = 'high';
                     statusText = 'Sangat Baik';
