--- a/index.html
+++ b/index.html
@@ -340,36 +340,36 @@
                 participants = JSON.parse(savedParticipants);
             } else {
                 participants = [
-                    { id: 1, name: 'Ahmad Syafiq', active: true },
-                    { id: 2, name: 'Fatimah Zahra', active: true },
-                    { id: 3, name: 'Muhammad Rizki', active: true },
-                    { id: 4, name: 'Aisyah Nur', active: true },
-                    { id: 5, name: 'Abdullah Hasan', active: true },
-                    { id: 6, name: 'Khadijah Sari', active: true },
-                    { id: 7, name: 'Umar Faruq', active: true },
-                    { id: 8, name: 'Zainab Fitri', active: true },
-                    { id: 9, name: 'Ali Akbar', active: true },
-                    { id: 10, name: 'Hafshah Dewi', active: true },
-                    { id: 11, name: 'Bilal Ibrahim', active: true },
-                    { id: 12, name: 'Ruqayyah Aini', active: true },
-                    { id: 13, name: 'Khalid Amin', active: true },
-                    { id: 14, name: 'Ummu Salamah', active: true },
-                    { id: 15, name: 'Hamzah Firdaus', active: true },
-                    { id: 16, name: 'Maryam Salsabila', active: true },
-                    { id: 17, name: 'Yusuf Hakim', active: true },
-                    { id: 18, name: 'Sakinah Putri', active: true },
-                    { id: 19, name: 'Zakariya Ramdan', active: true },
-                    { id: 20, name: 'Aminah Rahma', active: true },
-                    { id: 21, name: 'Ismail Hidayat', active: true },
-                    { id: 22, name: 'Shafikah Aulia', active: true },
-                    { id: 23, name: 'Sulaiman Noor', active: true },
-                    { id: 24, name: 'Barakah Insani', active: true },
-                    { id: 25, name: 'Dawud Qadri', active: true },
-                    { id: 26, name: 'Layla Hanifa', active: true },
-                    { id: 27, name: 'Isa Maulana', active: true },
-                    { id: 28, name: 'Salma Hidayah', active: true },
-                    { id: 29, name: 'Harun Syukur', active: true },
-                    { id: 30, name: 'Naila Barokah', active: true }
+                    { id: 1, name: 'Syafiq', active: true },
+                    { id: 2, name: 'Fatimah', active: true },
+                    { id: 3, name: 'Muhammad', active: true },
+                    { id: 4, name: 'Aisyah', active: true },
+                    { id: 5, name: 'Abdullah', active: true },
+                    { id: 6, name: 'Khadijah', active: true },
+                    { id: 7, name: ' aruq', active: true },
+                    { id: 8, name: 'Zainab', active: true },
+                    { id: 9, name: 'Ali', active: true },
+                    { id: 10, name: 'Hafshah', active: true },
+                    { id: 11, name: 'Ibrahim', active: true },
+                    { id: 12, name: 'Mamduh', active: true },
+                    { id: 13, name: 'Peserta', active: true },
+                    { id: 14, name: 'Peserta', active: true },
+                    { id: 15, name: 'Peserta Peserta', active: true },
+                    { id: 16, name: 'Peserta Peserta', active: true },
+                    { id: 17, name: 'YPeserta', active: true },
+                    { id: 18, name: 'Peserta', active: true },
+                    { id: 19, name: 'ZPeserta', active: true },
+                    { id: 20, name: 'APeserta', active: true },
+                    { id: 21, name: 'Peserta', active: true },
+                    { id: 22, name: 'SPeserta', active: true },
+                    { id: 23, name: 'Peserta', active: true },
+                    { id: 24, name: 'Peserta', active: true },
+                    { id: 25, name: 'Peserta', active: true },
+                    { id: 26, name: 'Peserta', active: true },
+                    { id: 27, name: 'Peserta', active: true },
+                    { id: 28, name: 'Peserta', active: true },
+                    { id: 29, name: 'Peserta', active: true },
+                    { id: 30, name: 'Peserta', active: true }
                 ];
                 saveData();
             }
