--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@
    const firebaseConfig = {
   apiKey: "AIzaSyBSqs7LUpQ11h6qOB5exqXdAZVA4V3vfDA",
   authDomain: "odoj-40592.firebaseapp.com",
+ databaseURL: "https://odoj-40592-default-rtdb.asia-southeast1.firebasedatabase.app",
+
   projectId: "odoj-40592",
   storageBucket: "odoj-40592.firebasestorage.app",
   messagingSenderId: "1086230605852",
